Fixed up alignment of status icons.

--- a/VSOnline/styles/styles.less
+++ b/VSOnline/styles/styles.less
@@ -259,7 +259,7 @@ div.content {
             ul {
 
                 li {
-                    line-height: 120%;
+                    line-height: 130%;
                     margin-bottom: (@gutter / 2);
 
                     a {
@@ -304,6 +304,10 @@ div.content {
 
                     a:hover span.subdued {
                         color: #444;
+                    }
+
+                    a span img {
+                        vertical-align: top;
                     }
                 }
 
